css scrollbar fix

--- a/mods/themes/catppuccin/theme.scss
+++ b/mods/themes/catppuccin/theme.scss
@@ -364,3 +364,9 @@
     background-color: var(--bg-surface-hover) !important;
   }
 }
+
+.catppuccin-theme-latte {
+  #settings-base #setting-tab .nav-link:hover {
+    background-color: #ccd0da !important;
+  }
+}
