--- a/src/scss/theme/butter/base.scss
+++ b/src/scss/theme/butter/base.scss
@@ -20,4 +20,8 @@
   --ic-surface-high: rgb(255, 251, 222);
   --ic-surface-normal: rgba(255, 251, 222, 84%);
   --ic-surface-low: rgba(255, 251, 222, 64%);
+
+  #settings-base #setting-tab .nav-link:hover {
+    background-color: #222 !important;
+  }
 }
