--- a/src/scss/theme/white/base.scss
+++ b/src/scss/theme/white/base.scss
@@ -399,3 +399,9 @@
   --bs-btn-disabled-border-color: transparent;
   --bs-gradient: none;
 }
+
+.default-theme {
+  #settings-base #setting-tab .nav-link:hover {
+    background-color: #eee !important;
+  }
+}
